controlies (0.6.5-11) unstable; urgency=low

  * Modificado codigo de seguimiento de maquinas para que no se produzca error cuando el fichero /var/lib/dpkg/lock esta bloqueado.
  * Añadido script controlies-seguimiento y varios mas a los clientes, que se ejecutará al recibir IP. Usado para los portatiles que se encienden sin conexion a red.

 -- Manuel Mora Gordillo <manuito@gmail.com>  Fri, 18 Dec 2013 11:05:00 +0200

controlies (0.6.5-10) unstable; urgency=low

  * Arreglado bug en seguimiento de aula con nombre de equipo de profesor (problema mays-mins).
  * Modificado seguimiento de aula para que muestre actividad en aulas de workstations y portatiles
  * Modificado RPCServer.py para mayor seguridad y devolucion del nombre del pc del profesor en aulas de portatiles.
  * Modificado el seguimiento de tareas puppet para adaptarlo a las versiones de puppet para Debian Wheezy
  * Arreglado bug en seguimiento de equipos que provocaba fallos en la deteccion del estado de paquetes.
  * Arreblado bug en paquete controlies-client: el script de desinstalación no limpiaba todo.

 -- Manuel Mora Gordillo <manuito@gmail.com>  Fri, 18 Dec 2013 11:05:00 +0200

controlies (0.6.5-9) unstable; urgency=low

  * Control independiente de alertas de teclado, ratón y apagados para thinclients
  * Mejorada deteccion de thinclients apagados (problema: sigue dando falsos positivos)
  * Arreglados bugs de columnas en grid de thinclients
  * Informes de log de impresión con filtros y en varios formatos
  * Arreglado bug en el formato de fechas de los datePicker
  * Seguimiento de impresión: añadida opción de borrado de registros
  * Seguimiento de impresión: añadida opción de modificacion manual de núm. de póginas y copias
  * Configuración: remodelación del formulario para ganar visibilidad 
  * Configuración: añadido grid para insertar las franjas horarias del centro, para ser usada en el seg. de aulas
  * Nuevo seguimiento: seguimiento de uso de un aula en una fecha concreta