@@ -2,6 +2,7 @@ controlies (0.6.5-11) unstable; urgency=low
 
   * Modificado codigo de seguimiento de maquinas para que no se produzca error cuando el fichero /var/lib/dpkg/lock esta bloqueado.
   * Añadido script controlies-seguimiento y varios mas a los clientes, que se ejecutará al recibir IP. Usado para los portatiles que se encienden sin conexion a red.
+  * Modificado codigo de seguimiento de puppet para no registrar como error ciertos avisos esporadicos de puppet.
 
  -- Manuel Mora Gordillo <manuito@gmail.com>  Fri, 18 Dec 2013 11:05:00 +0200
 
